# app/serializers/country_serializer.rb
@@ -4,6 +4,6 @@ class CountrySerializer
   end
 
   def as_json(*)
-    { id: @country.id, code: @country.code, name: @country.name }
+    { id: @country.id, code: @country.code, name: @country.name, employer_cost_multiplier: @country.employer_cost_multiplier }
   end
 end
